# zklease

./: .contract-id  .env.example  .gitignore  .vercelignore  Dockerfile  Dockerfile.api  README.md  package-lock.json  package.json  turbo.json  vercel.json
apps/api/: .env.example  package.json  railway.json  tsconfig.json
apps/web/: .env.example  (+4 more)
contracts/zklease/: Cargo.toml  Makefile
contracts/zklease/src/: lib.rs  test.rs  types.rs  verifier.rs
contracts/zklease/test_snapshots/test/: test_claim_winnings.1.json  test_create_prediction.1.json  test_create_prediction_too_few_options.1.json  test_create_rps_game.1.json  test_create_rps_game_insufficient_balance.1.json  test_credential_network_field.1.json  test_deposit_and_withdraw.1.json  test_full_rps_game_flow.1.json  test_get_all_predictions.1.json  test_get_all_rps_games.1.json  test_get_credentials_for_empty.1.json  test_grant_and_revoke_multiple_users.1.json  test_grant_credential_below_threshold_panics.1.json  test_grant_credential_success.1.json  test_join_rps_game.1.json  test_join_rps_game_wrong_player.1.json  test_multiple_credentials.1.json  test_place_bet.1.json  test_resolve_prediction.1.json  test_resolve_prediction_non_creator_fails.1.json  test_revoke_already_inactive_fails.1.json  test_revoke_credential.1.json  test_revoke_nonexistent_credential_fails.1.json  test_rps_draw.1.json  test_rps_invalid_reveal_fails.1.json  test_rps_rock_beats_scissors.1.json  test_set_threshold.1.json
docs/: architecture.md  submission.md  walkthrough.md
scripts/: deploy-contracts.sh  seed.ts  setup.sh
(+55 files in other folders)
