[package]
name = "zklease"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[package.metadata.soroban]
target = "wasm32v1-none"

[dependencies]
soroban-sdk = "26.1.0"

[dev_dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = 0
codegen-units = 1

[profile.release.build-override]
opt-level = "z"
codegen-units = 1
